...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TabLayout
                    android:id="@+id/course_tabs"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:tabMode="fixed"
                    app:tabGravity="fill"
                    app:tabTextColor="@color/tabCourseTextColor"
                    app:tabSelectedTextColor="@color/tabCourseSelectedTextColor"
...
        </android.support.design.widget.CoordinatorLayout>


    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_menu" />
...
