...
                    android:text="1학기"/>

                <ListView
                    android:background="@color/bookMemoEditBackground"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:id="@+id/first_list"
                    android:divider="@color/tabCourseBackground"
                    android:dividerHeight="1sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

...
